--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,10 @@ body{
     background-color:beige
 }
 
+div {
+    padding: 5px;
+}
+
 p {
     color: black;
     font-family: 'Merriweather', serif;
@@ -25,3 +29,10 @@ img {
 	height: 500px;
 	box-shadow: rgba(0,0,0,0.2) 10px 10px;
 }
+
+footer {
+    display: flex;
+    font-size: 10px;
+    border: 350px;
+}
+
