--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body{
-    background-color:beige
+    background-color:beige;
 }
 
 div {
@@ -7,9 +7,7 @@ div {
 }
 
 p {
-    color: black;
     font-family: 'Merriweather', serif;
-    /*border: 5px solid rgb(170, 40, 40)*/
     text-align: justify;
     padding: 5px;
     
@@ -36,3 +34,23 @@ footer {
     border: 350px;
 }
 
+.QnA{
+    display: flex ;
+    
+}
+
+.Q {
+    
+    width: 25%;
+    background-color: black;
+    color: white;
+    
+    
+}
+
+.A{
+    
+    width: 75%;
+    background-color: whitesmoke;
+    color: black;
+}
