--- a/styles/main.css
+++ b/styles/main.css
@@ -11,13 +11,13 @@ body {
 }
 
 .container {
-    /*outline: solid red 1px;*/
+    outline: solid red 1px;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
     
 }
 .row {
     position: relative;
-   /* outline: solid green 1px;*/
+   outline: solid green 1px;
     margin-top: 0px;
     margin-bottom: 45px;
     
@@ -25,26 +25,26 @@ body {
 
 .column,
   .columns {
-      /*outline: solid blue 1px;*/
+      outline: solid blue 1px;
       
   }
 
   p {
       text-align: justify;
-     /* outline: solid lime 1px;*/
+      outline: solid lime 1px;
   }
 
   img {
-     /* outline: solid salmon 1px;*/
+     outline: solid salmon 1px;
   }
 
   footer{
       /*display: flex;*/
-     /* outline: solid magenta 1px;*/
+     outline: solid magenta 1px;
   }
 
   .foot{
-     /* outline: solid brown 1px;*/
+     outline: solid brown 1px;
   }
 
   .centered {
@@ -54,6 +54,7 @@ body {
     transform: translate(-50%, -50%);
     color: white;
     background-color: transparent;
+    text-align: center;
     
 }
 
@@ -72,4 +73,14 @@ h1 {
     max-width: 110px;
     max-height: 110px;
     filter: grayscale(100%);
+    padding-right: 185px;
+
+}
+
+.cultural {
+    background: lime;
+}
+
+.technical {
+    background: orangered;
 }
