--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-   /* outline: solid red 1px;*/
+   /*outline: solid red 1px;*/
     background: white;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
     min-height: 1000px;
@@ -24,6 +24,7 @@ body {
     /*outline: solid green 1px;*/
     margin-top: 0px;
     margin-bottom: 45px;
+    overflow: hidden;
     
 }
 
@@ -39,7 +40,7 @@ body {
   }
 
   img {
-    /* outline: solid salmon 1px;*/
+    /*outline: solid salmon 1px;*/
   }
 
   footer{
@@ -48,8 +49,26 @@ body {
   }
 
   .foot{
-    /* outline: solid brown 1px;*/
+   /*outline: solid brown 1px;*/
   }
+
+/*.header-image{
+    display:none;
+}
+
+@media (min-width: 550px) {
+    .header-image{
+        display: inherit;
+    }
+        .centered{
+        color: white;
+        
+    }
+}*/
+/* This code was intended to test disappearing the header image on small screens, but the default skeleton resizes it really well, so there's no need. */
+
+
+
 
   .centered {
     position: absolute;
@@ -57,10 +76,13 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    
     background-color: transparent;
     text-align: center;
     
 }
+
+
 
 h1 {
     background-color: transparent;
@@ -77,9 +99,16 @@ h1 {
     max-width: 110px;
     max-height: 110px;
     filter: grayscale(100%);
-    padding-right: 185px;
-
+    
 }
+/*
+@media (min-width: 550px) {
+    .illumination-inset {
+        padding-right: 185px;
+    }
+}*/
+/* I wanted to add whitespace on larger screens, but for it to be dynamic, so that the text to the right of the image always aligned with the right two buttons at the top. This doesn't seem possible with just CSS.*/
+
 
 .cultural {
     background:black;
@@ -95,9 +124,37 @@ h1 {
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
 }
 
+.QnA{
+    /*border: solid teal 1px;*/
+    
+}
+
+@media (min-width: 550px) {
+
+    /*.QnA{
+        display:flex;
+    }
+    
+    .Q {
+        min-width: 30.6666666667%;
+    }
+    
+    */
+
+    H3{
+        font-size: 1.8rem;
+    }
+
+
+
+}
+
+
 .Q {
     background: black;
-    width: 100%;
+    
     color: white;
     box-shadow: 5px 5px 5px rgb(37, 37, 37);
+    
+    
 }
