--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,7 @@ body {
 
 .column,
   .columns {
-      /*outline: solid blue 1px;*/
+      outline: solid blue 1px;
       
   }
 
@@ -44,12 +44,12 @@ body {
   }
 
   footer{
-      /*display: flex;*/
-     /*outline: solid magenta 1px;*/
+  
   }
 
   .foot{
    /*outline: solid brown 1px;*/
+
   }
 
 /*.header-image{
