edited button to match others, edited associated event listener, added better instructions and formatted them so board doesn't move

--- a/EDA-projects/minesweeper/minesweeper.css
+++ b/EDA-projects/minesweeper/minesweeper.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height:50px;
 }
 
 #message {
@@ -94,7 +95,7 @@ div.marked, div.marked:hover {
 }
 
 .restart {
-  margin-left: 456px;
+  /*margin-left: 456px;*/
 }
 
 .container {
