--- a/Personal-Projects/NoughtsAndCrosses/Noughts.css
+++ b/Personal-Projects/NoughtsAndCrosses/Noughts.css
@@ -11,7 +11,7 @@
     position: relative;
     padding:0px;
     outline: solid white 1px;
-    width: 33.333333333333333333333333333333333333333333333%;
+    width: 25%;
     
 }
 
